--- a/sass/base/helpers-customize.sass
+++ b/sass/base/helpers-customize.sass
@@ -27,6 +27,9 @@
   border-left: 0 !important
   border-right: 0 !important
 
+.is-hidden
+  display: none;
+
 $positions: ('top','left','bottom','right');
 
 @each $name, $size in $sizes-space 
