--- a/sass/base/helpers-customize.sass
+++ b/sass/base/helpers-customize.sass
@@ -47,8 +47,29 @@ $positions: ('top','left','bottom','right');
     font-family: $family-song !important
 .font-yahei
     font-family: $family-yahei !important    
-
+.g-is-bolder
+    font-weight: bolder !important
+    
 $cursor-types: ('pointer');
 @each $cursor in $cursor-types  
   .is-cursor-#{$cursor}
      cursor: #{$cursor}!important
+
+//Flex
+div.g-is-flex
+    display: -webkit-box
+    display: -ms-flexbox
+    display: flex
+    &.g-is-horz-center
+        -webkit-box-pack: center
+        -ms-flex-pack: center
+        justify-content: center 
+    &.g-is-vert-center
+        align-items: center
+div.is-grouped
+    &.g-is-horz-center
+        -webkit-box-pack: center
+        -ms-flex-pack: center
+        justify-content: center 
+    &.g-is-vert-center
+        align-items: center    
