--- a/sass/elements/_all.sass
+++ b/sass/elements/_all.sass
@@ -6,7 +6,8 @@
 @import "content.sass"
 @import "form.sass"
 @import "icon.sass"
-@import "image.sass"
+//@import "image.sass"
+@import "image-customize.sass"
 @import "notification.sass"
 @import "progress.sass"
 @import "table.sass"
