--- a/sass/utilities/initial-variables-customize.sass
+++ b/sass/utilities/initial-variables-customize.sass
@@ -46,6 +46,7 @@ $size-12: 0.75rem !default // 12px
 $size-13: 0.8125rem !default // 13px
 $size-14: 0.875rem !default // 14px
 $size-15: 0.9375rem !default // 15px
+$size-18: 0.9375rem !default // 18px
 
 $weight-light: 300 !default
 $weight-normal: 400 !default
